Configures consumer groups and rename Application classes

--- a/spring-cloud-stream/client/src/main/resources/application.yml
+++ b/spring-cloud-stream/client/src/main/resources/application.yml
@@ -12,6 +12,7 @@ spring:
           destination: process_queue
         processed:
           destination: processed
+          group: pong-consumer
       kafka:
         binder:
           brokers: localhost:9092
