--- a/spring-cloud-stream/server/src/main/resources/application.yml
+++ b/spring-cloud-stream/server/src/main/resources/application.yml
@@ -10,6 +10,7 @@ spring:
       bindings:
         process_queue:
           destination: process_queue
+          group: ping-consumer
         processed:
           destination: processed
       kafka:
